--- a/public/css/page.css
+++ b/public/css/page.css
@@ -69,6 +69,9 @@
   display: block;
   content: '';
 }
+.opening-message {
+  margin: -1.9em 0 1.8em 0;
+}
 .example:hover .view-source {
   display: block !important;
 }
@@ -99,6 +102,9 @@
 }
 .example .group:after {
   clear: both;
+}
+.example .message {
+  margin: 0;
 }
 .example .animation {
   display: inline-block;
@@ -176,6 +182,14 @@
   display: block;
   margin: 0 auto;
 }
+.example.layout .block-grey {
+  width: 100px;
+  height: 100px;
+}
+.example.layout .relative {
+  width: 100%;
+  height: 300px;
+}
 .example.typeface .module {
   padding: 1.6em 1.8em;
 }
@@ -186,14 +200,9 @@
 .example.typeface .module p + p {
   margin-top: 1.3em;
 }
-.example.alignment .module {
-  padding: 1.6em 1.8em;
-}
-.example.alignment .module p {
-  font-size: 1.1em;
-}
-.example.alignment .module p + p {
-  margin-top: 1.3em;
+.example.alignment .module p,
+.example.transformtext .module p {
+  padding: 0.7em;
 }
 .example.stages {
   margin-top: 20px;
@@ -378,19 +387,19 @@
   display: none;
 }
 .module .footer pre {
-  white-space: pre-wrap;
   background-color: #f2f4f6;
   margin: 1em -1em -1em -1em;
   -webkit-border-radius: 0 0 4px 4px;
   border-radius: 0 0 4px 4px;
-  padding: 1em;
+  padding: 0;
   border-top: 1px solid #dfe4e9;
   -moz-tab-size: 4;
   -o-tab-size: 4;
   tab-size: 4;
+  overflow: auto;
 }
 .module .footer code {
-  padding: 0;
+  padding: 1em;
   margin: 0;
   background-color: transparent;
 }
