--- a/public/css/page.css
+++ b/public/css/page.css
@@ -83,6 +83,9 @@
 .example .grid-row [class^='clm-'] {
   margin: 6px 0;
 }
+.example.dropdowns .stack + .stack {
+  margin-top: 14px;
+}
 .example .group {
   border: 1px solid #dfe4e9;
   *zoom: 1;
@@ -407,7 +410,7 @@
 .subbar {
   background-color: #202020;
   padding: 17px 0;
-  z-index: 2100;
+  z-index: 2300;
 }
 .sidebar.top .logo,
 .subbar .logo,
@@ -473,7 +476,7 @@
   padding: 13px 0;
   color: #fff;
   width: 100%;
-  z-index: 1900;
+  z-index: 2200;
 }
 .subbar .sub {
   font-size: 0.9em;
