--- a/public/css/page.css
+++ b/public/css/page.css
@@ -38,6 +38,7 @@
   background-color: #dfe4e9;
   -webkit-border-radius: 4px;
   border-radius: 4px;
+  display: block;
 }
 .show-grid > [class^='clm-'] {
   padding-top: 15px;
@@ -86,7 +87,10 @@
 .example.dropdowns .stack + .stack {
   margin-top: 14px;
 }
-.example .group {
+.example .message {
+  margin: 0;
+}
+.example.animations .group {
   border: 1px solid #dfe4e9;
   *zoom: 1;
   float: left;
@@ -98,16 +102,13 @@
   -webkit-border-radius: 4px;
   border-radius: 4px;
 }
-.example .group:before,
-.example .group:after {
+.example.animations .group:before,
+.example.animations .group:after {
   content: '';
   display: table;
 }
-.example .group:after {
+.example.animations .group:after {
   clear: both;
-}
-.example .message {
-  margin: 0;
 }
 .example .animation {
   display: inline-block;
@@ -255,6 +256,9 @@
 }
 .example .explanation .view-source:hover {
   color: #1877ff;
+  opacity: 1;
+  -ms-filter: none;
+  filter: none;
 }
 .example .explanation h6 {
   font-size: 1.1em;
@@ -270,6 +274,13 @@
 }
 .example.buttons .button {
   margin: 0.34em 0.6em 0.34em 0;
+}
+.example.showing .view-source {
+  display: block;
+  color: #1877ff;
+  opacity: 0.5;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+  filter: alpha(opacity=50);
 }
 .schemes {
   display: -webkit-inline-box;
@@ -379,14 +390,14 @@
   -ms-transition: all 100ms cubic-bezier(0.16, 0.86, 0.44, 1);
   transition: all 100ms cubic-bezier(0.16, 0.86, 0.44, 1);
 }
-.module.invisible {
+.module.collapsed {
   border: 0;
   -webkit-box-shadow: none !important;
   box-shadow: none !important;
   padding: 0;
   margin: 0;
 }
-.module.invisible .footer {
+.module.collapsed .footer:not(.content) {
   display: none;
 }
 .module .footer pre {
