Progress bars & format fix
Progress bar element added, formatting fixed

--- a/public/css/blossom.css
+++ b/public/css/blossom.css
@@ -1763,6 +1763,7 @@ ol.ordered li[value]:before {
 }
 .divider.horizontal {
   display: table;
+  white-space: nowrap;
 }
 .divider.horizontal:before {
   background-position: right 1em top 50%;
