--- a/public/css/blossom.css
+++ b/public/css/blossom.css
@@ -1245,7 +1245,7 @@ strong {
   border-collapse: separate;
 }
 .table.stripes tr:nth-child(2n) {
-  background-color: #f8fafb;
+  background-color: #fbfcfd;
 }
 .table.simple th {
   background-color: transparent;
@@ -1270,7 +1270,7 @@ strong {
 }
 .table th {
   padding: 1em;
-  background-color: #f2f4f6;
+  background-color: #f7f9fb;
   font-weight: 600;
   border-bottom: 1px solid #dfe4e9;
 }
@@ -1785,7 +1785,7 @@ ol.ordered li[value]:before {
 }
 .message {
   padding: 0.875em 1.4em;
-  background-color: #f2f4f6;
+  background-color: #f7f9fb;
   border: 1px solid #c9d2da;
   -webkit-border-radius: 4px;
   border-radius: 4px;
@@ -2071,7 +2071,7 @@ ol.ordered li[value]:before {
   background-color: #dfe4e9 !important;
 }
 .smoke:not(.button).light {
-  background-color: #f2f4f6 !important;
+  background-color: #f7f9fb !important;
 }
 .smoke:not(.button).dark {
   background-color: #c4cdd6 !important;
@@ -2415,6 +2415,7 @@ ol.ordered li[value]:before {
   border-radius: 4px;
   background-color: #475767;
   position: relative;
+  width: 0;
 }
 .progress .bar .status {
   color: #fff;
@@ -2590,13 +2591,13 @@ ol.ordered li[value]:before {
   color: #13ce66;
 }
 .stages .stage.active {
-  background-color: #f2f4f6;
+  background-color: #f7f9fb;
 }
 .stages .stage.active .header {
   color: #6435c9;
 }
 .stages .stage.active:before {
-  border-left-color: #f2f4f6;
+  border-left-color: #f7f9fb;
 }
 .stages .stage .icon {
   margin-right: 1em;
