--- a/public/css/page.css
+++ b/public/css/page.css
@@ -54,6 +54,16 @@
   font-size: 3.8em;
   margin-top: 0.3em;
 }
+.hero h3 {
+  margin: 0.3em 0;
+  font-weight: 300;
+}
+.hero .button-group {
+  margin-top: 1.8em;
+}
+.hero .button-group > * {
+  margin-left: 0.8em;
+}
 .block-grey {
   width: 100%;
   height: 3em;
@@ -191,7 +201,7 @@
   text-align: center;
   margin: 0;
   color: #707f87;
-  background-color: #f2f4f6;
+  background-color: #f7f9fb;
   font-size: 0.875em;
   -webkit-border-radius: 0;
   border-radius: 0;
@@ -438,7 +448,7 @@
   display: none;
 }
 .module .footer pre {
-  background-color: #f2f4f6;
+  background-color: #f7f9fb;
   margin: 1em -1em -1em -1em;
   -webkit-border-radius: 0 0 4px 4px;
   border-radius: 0 0 4px 4px;
@@ -473,9 +483,9 @@
 .subbar .logo img,
 .sidebar.top .sub img,
 .subbar .sub img {
-  max-height: 16px;
+  max-height: 35px;
   position: absolute;
-  top: 0;
+  top: -9px;
 }
 .sidebar.top .logo p,
 .subbar .logo p,
