--- a/public/css/page.css
+++ b/public/css/page.css
@@ -48,7 +48,8 @@
 }
 .hero {
   text-align: center;
-  padding: 2em 0;
+  padding: 2em 0 6em 0;
+  border-bottom: 1px solid #dfe4e9;
 }
 .hero h1 {
   font-size: 3.8em;
@@ -63,6 +64,143 @@
 }
 .hero .button-group > * {
   margin-left: 0.8em;
+}
+.icons {
+  background: url("../examples/icons.jpg") repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  *zoom: 1;
+  height: 482px;
+  -webkit-animation: bgscroll 170s linear infinite;
+  -moz-animation: bgscroll 170s linear infinite;
+  -o-animation: bgscroll 170s linear infinite;
+  -ms-animation: bgscroll 170s linear infinite;
+  animation: bgscroll 170s linear infinite;
+}
+.icons:before,
+.icons:after {
+  content: '';
+  display: table;
+}
+.icons:after {
+  clear: both;
+}
+.iconsoverlay {
+  height: 100%;
+  width: 100%;
+  content: '';
+  background-color: rgba(0,0,0,0.7);
+  position: relative;
+}
+.iconsoverlay .centered {
+  text-align: center;
+  color: #fff;
+}
+.iconsoverlay .fa-large {
+  font-size: 3em;
+  color: #fff;
+  margin: 0 0 0.6em 0;
+}
+.iconsoverlay h5 {
+  font-weight: 300;
+  margin: 0.8em 0;
+  line-height: 1.4em;
+  opacity: 0.8;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
+  filter: alpha(opacity=80);
+  font-size: 1.2em;
+}
+.iconsoverlay h5 a {
+  color: #fff;
+  position: relative;
+  display: inline-block;
+}
+.iconsoverlay h5 a:after {
+  content: '';
+  border-bottom: 1px dashed #fff;
+  display: block;
+}
+.iconsoverlay h5 a:hover {
+  cursor: pointer;
+}
+.iconsoverlay h5 a:hover:after {
+  border-bottom: 1px solid #fff;
+}
+.iconsoverlay .button.outlined {
+  margin: 0.6em 0 0 0;
+  font-size: 1.2em;
+}
+.features {
+  *zoom: 1;
+}
+.features:before,
+.features:after {
+  content: '';
+  display: table;
+}
+.features:after {
+  clear: both;
+}
+.features .row {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  position: relative;
+  -webkit-box-orient: horizontal;
+  -moz-box-orient: horizontal;
+  -o-box-orient: horizontal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-lines: multiple;
+  -moz-box-lines: multiple;
+  -o-box-lines: multiple;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-align: stretch;
+  -moz-box-align: stretch;
+  -o-box-align: stretch;
+  -ms-flex-align: stretch;
+  -webkit-align-items: stretch;
+  align-items: stretch;
+}
+.column {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -moz-box-orient: vertical;
+  -o-box-orient: vertical;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  text-align: center;
+}
+.column p {
+  -webkit-box-flex: 1;
+  -moz-box-flex: 1;
+  -o-box-flex: 1;
+  box-flex: 1;
+  -webkit-flex: 1 0 auto;
+  -ms-flex: 1 0 auto;
+  flex: 1 0 auto;
+}
+.column .button {
+  -webkit-box-flex: 0;
+  -moz-box-flex: 0;
+  -o-box-flex: 0;
+  -ms-box-flex: 0;
+  box-flex: 0;
+  -webkit-flex-grow: 0;
+  flex-grow: 0;
 }
 .block-grey {
   width: 100%;
@@ -623,7 +761,7 @@ aside.sidebar li a {
   margin-top: 11px;
 }
 footer.footer {
-  margin-top: 30px;
+  margin-top: 2em;
   *zoom: 1;
   float: left;
   clear: none;
@@ -632,7 +770,7 @@ footer.footer {
   margin-left: 0%;
   margin-right: 0%;
   position: absolute;
-  bottom: 10px;
+  bottom: 1em;
   left: 0;
 }
 footer.footer:before,
@@ -661,4 +799,32 @@ footer.footer .inner {
 }
 footer.footer .inner .links li a {
   font-size: 0.875em;
+}
+.homepage + footer.footer {
+  position: static;
+  margin: 0;
+}
+.homepage + footer.footer .inner {
+  border: 0;
+  padding: 2em 0;
+}
+@-moz-keyframes bgscroll {
+  100% {
+    background-position: 0 -5384px;
+  }
+}
+@-webkit-keyframes bgscroll {
+  100% {
+    background-position: 0 -5384px;
+  }
+}
+@-o-keyframes bgscroll {
+  100% {
+    background-position: 0 -5384px;
+  }
+}
+@keyframes bgscroll {
+  100% {
+    background-position: 0 -5384px;
+  }
 }
