--- a/public/css/blossom.css
+++ b/public/css/blossom.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Lato:400,700,900,300");
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -110,27 +109,21 @@ body {
 }
 h1 {
   font-size: 3em;
-  font-weight: 600;
 }
 h2 {
   font-size: 2.6em;
-  font-weight: 600;
 }
 h3 {
   font-size: 2.2em;
-  font-weight: 600;
 }
 h4 {
   font-size: 1.8em;
-  font-weight: 600;
 }
 h5 {
   font-size: 1.4em;
-  font-weight: 600;
 }
 h6 {
   font-size: 1.08em;
-  font-weight: 600;
 }
 ::selection {
   color: #000;
@@ -143,6 +136,9 @@ a {
 }
 a:hover {
   color: #4b2897;
+}
+p {
+  line-height: 1.4em;
 }
 strong {
   font-weight: 700;
@@ -650,6 +646,7 @@ strong {
 }
 .grid-row {
   margin: 0 -15px;
+  overflow: hidden;
 }
 .grid-row:before,
 .grid-row:after {
@@ -1063,6 +1060,20 @@ strong {
 .clearfix:after {
   clear: both;
 }
+.stackable > * {
+  display: block;
+  clear: both;
+  float: none;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.stackable > *:first-child {
+  margin-left: auto;
+}
+.stackable > *:last-child {
+  margin-right: auto;
+}
 .stack {
   display: block;
   clear: both;
@@ -1076,6 +1087,20 @@ strong {
 }
 .stack:last-child {
   margin-right: auto;
+}
+.unstack {
+  text-align: left;
+  display: inline;
+  clear: none;
+  width: auto;
+  margin-left: 0;
+  margin-right: 0;
+}
+.unstack:first-child {
+  margin-left: 0;
+}
+.unstack:last-child {
+  margin-right: 0;
 }
 .relative {
   position: relative;
