--- a/public/css/blossom.css
+++ b/public/css/blossom.css
@@ -108,7 +108,7 @@ body {
   padding: 0;
 }
 h1 {
-  font-size: 3em;
+  font-size: 3.8em;
 }
 h2 {
   font-size: 2.6em;
@@ -1269,8 +1269,8 @@ strong {
   border: 1px solid #dfe4e9;
   border-collapse: separate;
 }
-.table.stripes tr:nth-child(2n) {
-  background-color: #fbfcfd;
+.table.striped tr:nth-child(2n) {
+  background-color: #f7f9fb;
 }
 .table.simple th {
   background-color: transparent;
@@ -1295,7 +1295,7 @@ strong {
 }
 .table th {
   padding: 1em;
-  background-color: #f7f9fb;
+  background-color: #f1f4f7;
   font-weight: 600;
   border-bottom: 1px solid #dfe4e9;
 }
@@ -1303,6 +1303,12 @@ strong {
   padding: 0.8em 1em;
   border-bottom: 1px solid #dfe4e9;
   line-height: 1.375em;
+}
+.table tr td i {
+  margin-right: 0.4em;
+  opacity: 0.6;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=60)";
+  filter: alpha(opacity=60);
 }
 .table tr:last-child td {
   border-bottom: 0;
@@ -1547,7 +1553,7 @@ strong {
 }
 .button:hover {
   color: #404040;
-  background-color: #d4dbe2;
+  background-color: hover-background-light-gray;
   -webkit-box-shadow: inset 0 -2px 0 rgba(37,51,66,0.14);
   box-shadow: inset 0 -2px 0 rgba(37,51,66,0.14);
 }
@@ -1641,7 +1647,7 @@ ol.list {
 }
 .list.divided li,
 .list.divided .item {
-  border-top: 1px solid #c9d2da;
+  border-top: 1px solid border-light-red-gray;
 }
 .list.horizontal li {
   display: inline-block;
@@ -1817,7 +1823,7 @@ ol.ordered li[value]:before {
 .message {
   padding: 0.875em 1.4em;
   background-color: #f7f9fb;
-  border: 1px solid #c9d2da;
+  border: 1px solid border-light-red-gray;
   -webkit-border-radius: 4px;
   border-radius: 4px;
   margin: 1em 0;
@@ -2578,9 +2584,10 @@ ol.ordered li[value]:before {
 }
 .stages .stage .header {
   display: block;
-  font-weight: 600;
+  font-weight: 400;
   font-size: 1.1em;
-  margin-bottom: 0.1em;
+  margin-bottom: 0.2em;
+  color: #3e464a;
 }
 .stages .stage:last-child:before,
 .stages .stage:last-child:after {
@@ -2595,7 +2602,7 @@ ol.ordered li[value]:before {
   border-left: 0.8em solid #fff;
   position: absolute;
   right: -0.55em;
-  top: 30%;
+  top: 31%;
   z-index: 900;
 }
 .stages .stage:after {
@@ -2644,6 +2651,7 @@ ol.ordered li[value]:before {
   -webkit-flex: 0 1 auto;
   -ms-flex: 0 1 auto;
   flex: 0 1 auto;
+  color: #707f87;
 }
 .dimmed {
   position: absolute;
